# ds-pipelines-status

./: README.md  index.html  pyproject.toml  script.js  styles.css
.github/workflows/: update.yml
data/: pipelines.json
scripts/: fetch_pipelines.py
